@@ -117,7 +117,8 @@
    | IPMI_MONITORING_SENSOR_READING_FLAGS_BRIDGE_SENSORS                   \
    | IPMI_MONITORING_SENSOR_READING_FLAGS_INTERPRET_OEM_DATA               \
    | IPMI_MONITORING_SENSOR_READING_FLAGS_SHARED_SENSORS                   \
-   | IPMI_MONITORING_SENSOR_READING_FLAGS_DISCRETE_READING)
+   | IPMI_MONITORING_SENSOR_READING_FLAGS_DISCRETE_READING                 \
+   | IPMI_MONITORING_SENSOR_READING_FLAGS_IGNORE_SCANNING_DISABLED)
 
 #define IPMI_MONITORING_AUTHENTICATION_TYPE_DEFAULT           IPMI_AUTHENTICATION_TYPE_MD5
 #define IPMI_MONITORING_PRIVILEGE_LEVEL_DEFAULT               IPMI_PRIVILEGE_LEVEL_USER
